--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Consulta tu itinerario
                     </label>
                     <input type="text" name="email" id="email" size="35" value="">
                   </p>
-                  <p><a href="https://pricetravelresevacion.github.io/EligioCamposBelmont/Itinerario%20para%20Localizador%2020444193.html"><img src="./index_files/Sin título.png" width="103" height="33"></a> </p>
+                  <p><a href="Dara/Itinerario para Localizador 20453993.html"><img src="./index_files/Sin título.png" width="103" height="33"></a> </p>
                </div>
             </div>
             <div id="login-info">
